2007-06-18  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/java.lang: LGPL'ed.

	* gtksourceview/Makefile.am: do not distribute gtksourcetypebuiltins.*,
	like gtksourcemarshal.*.

=== gtksourceview 1.90.1 ===

2007-06-19  Paolo Borelli  <pborelli@katamail.com>

	* NEWS:
	* README:
	* configure.ac:

	GtkSourceView 1.90.1 released.

2007-06-18  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/sh.lang:	LGPL'ed.

2007-06-18  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/sql.lang:
	* gtksourceview/language-specs/docbook.lang:
	* gtksourceview/language-specs/perl.lang:
	LGPL'ed.

2007-06-18  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcestylescheme.c (update_cursor_colors): don't
	confuse primary and secondary.

2007-06-18  Yevgen Muntyan  <muntyan@tamu.edu>

	Made GtkSourceStyle a GObject, with properties for text attributes,
	similar to GtkTextTag;
	made GtkSourceStyle keep colors as strings interned with g_intern_string,
	in order not to waste memory;
	style schemes use background attribute of sourcestyle for current line
	color now.

	* gtksourceview/gtksourcestyle.h:
	* gtksourceview/gtksourcestyle.c:
	implemented above changes.
	* gtksourceview/gtksourcestyle-private.h: new file to keep GtkSourceStyle
	structure.

	* gtksourceview/Makefile.am: added gtksourcestyle-private.h; made
	gtksourceview-typebuiltins.[ch] build in builddir, to make distcheck
	very happy.

	* gtksourceview/gtksourcestylescheme.h:
	* gtksourceview/gtksourcestylescheme.c:
	* gtksourceview/gtksourcecontextengine.c:
	* gtksourceview/gtksourcebuffer.c:
	updated for new GtkSourceStyle API.

	* docs/reference/gtksourceview-sections.txt:
	* docs/reference/tmpl/style.sgml:
	* docs/reference/tmpl/stylescheme.sgml:
	* docs/reference/tmpl/view.sgml:
	updated.

	* gtksourceview/language-specs/testdark.styles:
	* gtksourceview/language-specs/testdark.xml:
	renamed testdark.styles to testdark.xml.
