@@ -106,7 +106,6 @@ in a view widget.
 </para>
 
 @parent_class: 
-@highlight_updated: 
 @marker_updated: 
 @_gtk_source_reserved1: 
 @_gtk_source_reserved2: 
